cabal-version:      >= 1.10
name:               plugin0
version:            0.1
author:             Chaitanya Koparkar
maintainer:         ckoparkar@gmail.com
build-type:         Simple

library
    exposed-modules:  Gibbon.Plugin0
    other-modules:    Gibbon.CoreToL0
                      Gibbon.Utils
    hs-source-dirs:   src
    build-depends:  base == 4.17.*
                  , ghc == 9.4.3
                  , containers
                  , gibbon
    ghc-options: -Wall -Wcompat -fdefer-typed-holes
    default-language: Haskell2010
    default-extensions: ScopedTypeVariables
                        BangPatterns
                        TupleSections
