cabal-version:      >= 1.10
name:               plugin1
version:            0.1
author:             Chaitanya Koparkar
maintainer:         ckoparkar@gmail.com
build-type:         Simple

library
    exposed-modules:  Gibbon.Plugin1
    hs-source-dirs:   src
    build-depends:  base == 4.17.*
                  , ghc == 9.4.3
                  , containers
    ghc-options: -Wall -Wcompat -fdefer-typed-holes
    default-language: Haskell2010
    default-extensions: ScopedTypeVariables
                        BangPatterns
                        TupleSections
